# nl-database-analyst

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
db/: init.sql
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
k8s/: backend.yaml  frontend.yaml  postgres.yaml  secrets.yaml
