[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "huggingface-hub>=1.21.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "langsmith>=0.9.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
